Upgraded to gatsby 3

--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -97,6 +97,7 @@ footer.navbar{
 .active{
     /* font-weight:bold !important; */
     background: var(--highlight-color);
+    color: var(--main-content) !important;
 }
 
 /* -------------- */
