--- a/src/styles/sketchbook.css
+++ b/src/styles/sketchbook.css
@@ -284,7 +284,7 @@
 
 .message{
     position: absolute;
-    bottom: 16px;
+    top: 48px;
     left: 16px;
     font-size: 14px;
     font-family: 'DM Sans';
